<resources>
    <string name="app_name">WeatherID</string>
    <string name="nama_kota_example">Sleman</string>
    <string name="temp_now_example">30°C</string>
    <string name="desc_now_example">Cerah</string>
    <string name="day_example">Sen</string>
    <string name="time_example">06:00</string>

    <string name="humidity">Kelembapan</string>
    <string name="pressure">Tekanan</string>
    <string name="wind_speed">Kecepatan Udara</string>
    <string name="humidity_example">98%</string>
    <string name="pressure_example">991.98 hPa</string>
    <string name="wind_speed_example">1.22 m/s</string>
    <array name="Standard">
        <item>°K</item>
        <item>%</item>
        <item>hPa</item>
        <item>m/s</item>
    </array>

    <array name="Metric">
        <item>°C</item>
        <item>%</item>
        <item>hPa</item>
        <item>m/s</item>
    </array>

    <array name="Imperial">
        <item>°F</item>
        <item>%</item>
        <item>hPa</item>
        <item>m/h</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
